# RaspberryPi-Rust-OSDev

./: .gitignore  Cargo.toml  Makefile  Readme.md  link.ld
.cargo/: config
raspi3_boot/: Cargo.toml
raspi3_boot/src/: asm.rs  lib.rs
rpi4-os/: Cargo.toml  Makefile  kernel8-rpi4.img  link.ld
rpi4-os/.cargo/: config
rpi4-os/boot/: Cargo.toml
rpi4-os/boot/src/: boot.S  lib.rs
rpi4-os/src/: gpio.rs  io.rs  main.rs  mbox.rs  uart.rs
src/: gpio.rs  main.rs  random.rs  uart.rs  utils.rs
src/exception/: handler.S  mod.rs  timer.rs
src/io/: mod.rs  uart.rs
src/kernel/: mod.rs
src/memory/: descriptors.rs  mmu.rs  mod.rs
